--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,7 +5,8 @@
 # below each fixture, per the syntax in the comments below
 #
 one: {}
-# column: value
+  email: oneexample.org
+  password: <%= Devise::Encryptor.digest(User, "password") %> # password
 #
 two: {}
 # column: value
