--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,10 +3,11 @@
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
-#
+
 one: {}
   email: oneexample.org
   password: <%= Devise::Encryptor.digest(User, "password") %> # password
 #
 two: {}
-# column: value
+  email: twoexample.org
+  password: <%= Devise::Encryptor.digest(User, "password") %> # password
