--- a/test/fixtures/links.yml
+++ b/test/fixtures/links.yml
@@ -1,10 +1,10 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  url: MyString
-  title: MyString
-  description: MyString
-  image: MyString
+  url: https://gorails.com
+  title: GoRails
+  description: Ruby on Rails screencasts for Web Developers
+  image: 
   views_count: 1
 
 two:
