Remove the two empty carlibraces inside user.yml file

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,11 +3,10 @@
 # This model initially had no columns defined. If you add columns to the
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
-
-one: {}
+one:
   email: oneexample.org
   encrypted_password: <%= Devise::Encryptor.digest(User, "password") %> # password
 #
-two: {}
+two:
   email: twoexample.org
   encrypted_password: <%= Devise::Encryptor.digest(User, "password") %> # password
