Update the user.yml file emails

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,9 +4,9 @@
 # model remove the "{}" from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 one:
-  email: oneexample.org
+  email: one@example.org
   encrypted_password: <%= Devise::Encryptor.digest(User, "password") %> # password
 #
 two:
-  email: twoexample.org
+  email: two@example.org
   encrypted_password: <%= Devise::Encryptor.digest(User, "password") %> # password
