--- a/.github/ci.yml
+++ b/.github/ci.yml
@@ -34,6 +34,7 @@ jobs:
          bin/rails db:test:prepare
          bin/rails test
 
+  # implement the remaning later
   # deploy:
   #   needs: build
   #   runs-on: ubuntu-latest
