Fix some ci/cd command errors removing bin/ from rails

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,9 @@ jobs:
        DATABASE_URL: postgres://postgres:12345@localhost:5432/test
        RAILS_ENV : test
       run:
-       bin/rails test:prepare
-       bin/rails db:test:prepare
-       bin/rails test
+       rails test:prepare
+       rails db:test:prepare
+       rails test
 
   # implement the remaning later
   # deploy:
